--- a/css/Estilos3.css
+++ b/css/Estilos3.css
@@ -7,6 +7,23 @@ body
  margin: 0;
  padding: 0;     
 }
+#cabecera
+{
+    background: #33A;
+    box-shadow: 0px 2px 20px 0px rgba(0,0,0,0.5);
+    color: white;
+    font-weight: bold;
+    margin:0;
+    padding: 0.5cm;
+}
+
+#Cabecera #Tagline
+{
+    margin: 0 0 0 1cm;
+    font-weight: normal;
+    font-size: 0.8cm;
+
+}
 #container
 { 
     width: 70%;
